--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -42,7 +42,12 @@ body {
 
     }
 
+    main {
 
+        #jumbotron {
+            background-color: var(--ds-bg-jumbo);
+        }
+    }
 }
 
 /* Utility */
@@ -63,7 +68,8 @@ body {
 /* header */
 
 header {
-    height: 5%;
+    min-height: 5%;
+    padding: 0.5rem;
 }
 
 .nmenu {
@@ -71,7 +77,15 @@ header {
 }
 
 .link-menu {
+
     li {
         margin: 0.2rem;
     }
+}
+
+/*main*/
+
+#jumbotron {
+    min-height: 500px;
+
 }
