--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -76,6 +76,10 @@ body {
             background-color: var(--ds-bg-article);
         }
     }
+
+    footer {
+        background-color: var(--ds-bg-footer);
+    }
 }
 
 /* Utility */
@@ -152,4 +156,11 @@ header {
     min-height: 450px;
     width: 80%;
     margin: auto;
+}
+
+#footer {
+    min-height: 10%;
+    flex-direction: column;
+    gap: 1rem;
+
 }
