complete main and footer

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -102,6 +102,11 @@ body {
             background-color: var(--ds-bg-fmenu);
         }
 
+        img,
+        input {
+            background-color: var(--ds-bg-fsqare);
+        }
+
     }
 }
 
@@ -207,5 +212,7 @@ footer {
 
 .fmenu {
     justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
 
 }
